@@ -19,6 +19,7 @@
 		<script type="text/javascript" src="js/buildings/abstract.js"></script>
 		<script type="text/javascript" src="js/buildings/headquarter.js"></script>
 		<script type="text/javascript" src="js/buildings/headquarter2.js"></script>
+		<script type="text/javascript" src="js/buildings/headquarter3.js"></script>
 		<script type="text/javascript" src="js/buildings/water_launch_pad.js"></script>
 		<script type="text/javascript" src="js/buildings/taelon_power_generator.js"></script>
 		<script type="text/javascript" src="js/buildings/training_facility.js"></script>
