@@ -1,7 +1,8 @@
-Build 25 (09.12.2012)
+Build 25 (10.12.2012)
 - Added "Advanced Assembly Plant" building
 - Added "Freighter" unit (it still can't harvest)
 - Power generator & Water launch pad now constructed with one Freighter unit
+- Added "Headquarter 3" building
 
 Build 24 (03.12.2012)
 - Changed interface cursor
